--- a/package.json
+++ b/package.json
@@ -14,8 +14,17 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "autoprefixer": "^7.1.2",
     "axios": "^0.16.2",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "moment": "^2.22.2",
+    "octicons": "^8.1.0",
+    "vue": "^2.4.2",
+    "vue-router": "^2.7.0",
+    "vue-sweetalert2": "^1.0.7",
+    "vuejs-datepicker": "^1.5.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^7.1.1",
@@ -24,9 +33,9 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "bootstrap-vue": "^2.0.0-rc.11",
     "chai": "^3.5.0",
     "chalk": "^2.0.1",
+    "chromedriver": "^2.27.2",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.1",
@@ -48,20 +57,21 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
-    "jquery": "^3.3.1",
     "karma": "^3.0.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-phantomjs-shim": "^1.4.0",
     "karma-sinon-chai": "^1.3.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
     "mocha": "^5.2.0",
-    "moment": "^2.22.2",
     "nightwatch": "^1.0.10",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
-    "ora": "^1.4.0",
+    "ora": "^1.2.0",
+    "phantomjs-prebuilt": "^2.1.14",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
@@ -69,20 +79,15 @@
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
     "url-loader": "^1.1.1",
-    "vue": "^2.4.2",
     "vue-loader": "^13.0.4",
-    "vue-router": "^2.7.0",
     "vue-style-loader": "^3.0.1",
-    "vue-sweetalert2": "^1.0.7",
     "vue-template-compiler": "^2.4.2",
-    "vuejs-datepicker": "^1.5.3",
     "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
   },
-  "devDependencies": {},
   "engines": {
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
