--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "express-flash": "0.0.2",
     "moment": "^2.22.2",
     "octicons": "^8.1.0",
     "vue": "^2.4.2",
