--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
   "dependencies": {
     "axios": "^0.16.2",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "d3": "^5.7.0",
+    "es6-promise": "^4.2.5",
     "express-flash": "0.0.2",
     "moment": "^2.22.2",
     "octicons": "^8.1.0",
     "vue": "^2.4.2",
+    "vue-material-design-icons": "^2.1.1",
     "vue-router": "^2.7.0",
+    "vue-simple-calendar": "^4.0.2",
     "vue-sweetalert2": "^1.0.7",
-    "vuejs-datepicker": "^1.5.3"
+    "vuejs-datepicker": "^1.5.3",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
