--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "es6-promise": "^4.2.5",
     "express-flash": "0.0.2",
     "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "octicons": "^8.1.0",
     "vue": "^2.4.2",
+    "vue-analytics": "^5.16.1",
     "vue-material-design-icons": "^2.1.1",
+    "vue-meta": "^1.5.5",
     "vue-router": "^2.7.0",
     "vue-simple-calendar": "^4.0.2",
+    "vue-slider-component": "^2.7.7",
     "vue-sweetalert2": "^1.0.7",
     "vuejs-datepicker": "^1.5.3",
     "vuex": "^3.0.1"
